tests/fail/wrong_arguments_section_placement.stderr
error: The #[roxygen] attribute must come before the arguments section attribute.
       Place it before any of the doc comments for the function.
 --> tests/fail/wrong_arguments_section_placement.rs:7:1
  |
7 | #[roxygen]
  | ^^^^^^^^^^

warning: use of deprecated macro `arguments_section`: use parameter_section instead
 --> tests/fail/wrong_arguments_section_placement.rs:5:3
  |
5 | #[arguments_section]
  |   ^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(deprecated)]` on by default
